# agenticAI

./: instructions.txt  pyproject.toml  requirements.txt
DataIngestParse/: dataingesting.ipynb
VectorDB/: 1-chromadb.ipynb
VectorDB/chroma_db/: chroma.sqlite3
