[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.0",
    "groq>=0.37.1",
    "ipykernel>=6.31.0",
    "langchain>=0.3.28",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.35",
    "langchain-text-splitters>=0.3.11",
    "pandas>=2.3.3",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
]
